code/java/IssueTracker/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Issue Tracker client library for Java

[![API Version](https://img.shields.io/badge/api-v1.3.0-blue)](https://developer.factset.com/api-catalog/issue-tracker-api)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/issuetracker/0.5.1)](https://central.sonatype.com/artifact/com.factset.sdk/issuetracker/0.5.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

This API is used to file issues

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.3.0
- SDK version: 0.5.1
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>issuetracker</artifactId>
  <version>0.5.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:issuetracker:0.5.1"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.IssueTracker.*;
import com.factset.sdk.IssueTracker.auth.*;
import com.factset.sdk.IssueTracker.models.*;
import com.factset.sdk.IssueTracker.api.AttachmentApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class AttachmentApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        AttachmentApi apiInstance = new AttachmentApi(defaultClient);
        String id = "id_example"; // String | identity value of file attachment
        String name = "name_example"; // String | name of the file
        try {
            File result = apiInstance.getFileAttachment(id, name);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling AttachmentApi#getFileAttachment");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.IssueTracker.*;
import com.factset.sdk.IssueTracker.api.AttachmentApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

AttachmentApi apiInstance = new AttachmentApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.IssueTracker.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/issue-tracker/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AttachmentApi* | [**getFileAttachment**](docs/AttachmentApi.md#getFileAttachment) | **GET** /attachments/{id}/{name} | get the matched file attachment
*AttachmentApi* | [**getFileExtensions**](docs/AttachmentApi.md#getFileExtensions) | **GET** /attachments/file-extensions | Allowed file types GET endpoint
*AttachmentApi* | [**postFileAttachment**](docs/AttachmentApi.md#postFileAttachment) | **POST** /attachments | Post file attachment to Issue Tracker Issue or comment
*IssueApi* | [**getIssue**](docs/IssueApi.md#getIssue) | **GET** /issues/{id} | Get the matched issue details
*IssueApi* | [**patchIssue**](docs/IssueApi.md#patchIssue) | **PATCH** /issues/{id} | Update severity and subject of issue or productId and categoryId of issue
*IssueApi* | [**postIssue**](docs/IssueApi.md#postIssue) | **POST** /issues | Creates a Issue Tracker issue
*IssueApi* | [**postReply**](docs/IssueApi.md#postReply) | **POST** /issues/{id}/comments | post comment to Issue Tracker issue


## Documentation for Models

 - [Attachment](docs/Attachment.md)
 - [AttachmentResponse](docs/AttachmentResponse.md)
 - [Comment](docs/Comment.md)
 - [CommentRequest](docs/CommentRequest.md)
 - [CommentRequestData](docs/CommentRequestData.md)
 - [Error](docs/Error.md)
 - [ErrorResponse](docs/ErrorResponse.md)
 - [FileExtension](docs/FileExtension.md)
 - [IdResponse](docs/IdResponse.md)
 - [IdResponseData](docs/IdResponseData.md)
 - [Issue](docs/Issue.md)
 - [IssueData](docs/IssueData.md)
 - [IssueRequest](docs/IssueRequest.md)
 - [IssueRequestData](docs/IssueRequestData.md)
 - [UpdateIssueRequest](docs/UpdateIssueRequest.md)
 - [UpdateIssueRequestData](docs/UpdateIssueRequestData.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
